# dcs-yawe

./: Cargo.toml
.cargo/: config.toml
crates/config/: Cargo.toml  Readme.md
crates/config/src/: lib.rs
crates/offload/: Cargo.toml
crates/offload/src/: lib.rs
crates/shim/: Cargo.toml
crates/shim/src/: lib.rs
crates/yawe/: Cargo.toml
crates/yawe/resources/: f16_hud_align.txt
crates/yawe/src/: app.rs  dcs.rs  gui.rs  lib.rs  logging.rs
crates/yawe/src/dcs/: f16c50.rs  mig21bis.rs  mod.rs
lua/: export.lua  hook.lua
lua/DCS/Config/: yawe-config.lua
lua/DCS/Scripts/: yawe-export.lua
lua/DCS/Scripts/Hooks/: yawe-gamegui.lua
