[package]
edition = "2021"
name = "yawe-shim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
#camino = "1.1"
config = {path = "../config"}
windows = { version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_Foundation"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
