[package]
edition = "2021"
name = "yawe_shim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
config = {path = "../config"}
log = "0.4.17"
log-panics = {version = "2", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
simple-logging = "2.0.2"
windows = {version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_Foundation"]}
