[package]
edition = "2021"
name = "yawe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
config = {path = "../config"}
eframe = {version = "0.21.3", features = ["wgpu"]}
egui = "0.21.0"
egui-wgpu = "0.21.0"
fern = {version = "^0.6.1", features = ["colored"]}
libc = "0.2.142"
log = "^0.4.17"
log-panics = {version = "2", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
serde = {version = "1.0.160", features = ["derive"]}
wgpu = {version = "0.16.0"}
windows = {version = "0.48.0", features = [
  "Win32_System_Console",
]}
winit = "0.28.3"
