[package]
edition = "2021"
name = "yawe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
config = {path = "../config"}
egui_backend = "0.4.0"
egui_render_glow = "0.4.2"
egui_window_glfw_passthrough = "0.4.2"
fern = {version = "^0.6.1", features = ["colored"]}
libc = "0.2.142"
log = "^0.4.17"
log-panics = {git = "https://github.com/bobmoretti/rust-log-panics.git/", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
offload = {path = "../offload"}
serde = {version = "1.0.160", features = ["derive"]}
thread-id = "4.0.0"
wgpu = {version = "0.16.0"}
windows = {version = "0.48.0", features = [
  "Win32_System_Console",
  "Win32_Foundation",
]}
winit = "0.28.3"
