[package]
edition = "2021"
name = "yawe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
config = {path = "../config"}
egui_backend = "0.4.0"
egui_render_glow = "0.4.2"
egui_window_glfw_passthrough = "0.4.2"
fern = {version = "^0.6.1", features = ["colored"]}
libc = "0.2.142"
log = "^0.4.17"
log-panics = {git = "https://github.com/bobmoretti/rust-log-panics.git/", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
offload = {path = "../offload"}
rsevents = "0.3.1"
serde = {version = "1.0.160", features = ["derive"]}
slab_tree = "0.3.2"
strum = {version = "0.25.0", features = ["std", "derive", "strum_macros"]}
strum_macros = "0.25.2"
thread-id = "4.0.0"
trace = "0.1.7"
wgpu = {version = "0.16.0"}
windows = {version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Foundation", "Win32_Graphics_Gdi"]}
winit = "0.28.3"
